--- a/partners.html
+++ b/partners.html
@@ -39,7 +39,7 @@
   <meta name="twitter:description" content="A cross-enterprise collaboration tool that is fast, easy to use and fully integrated within G Suite" />
   <meta name="twitter:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocialImages/socialmediacover.jpg" />
 
-  <title>Workep: Partners</title>
+  <title>Workep Partners - Grow your business faster with Workep</title>
 
   <!-- Page icon -->
   <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
@@ -76,7 +76,7 @@
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/product.html">PRODUCT</a></li>
              <li><a href="https://workep.com/madeforgoogle.html">GOOGLE PROJECT MANAGEMENT</a></li>
-             <li><a href="https://workep.com/stories.html">USE CASES</a></li>
+             <!-- <li><a href="https://workep.com/stories.html">USE CASES</a></li> -->
              <li><a href="https://workep.com/pricing.html">PRICING</a></li>
              <li><a href="https://workep.com/partners.html" target="_blank">PARTNERS</a></li>
 
@@ -364,10 +364,11 @@
             <li><a href="https://workep.com/product.html">Features</a></li>
             <!-- <li><a href="#url">Integrations </a></li> -->
             <!-- <li><a href="#url">Users guide </a></li> -->
-            <li><a href="https://workep.com/stories.html">Use cases </a></li>
+            <!-- <li><a href="https://workep.com/stories.html">Use cases </a></li> -->
             <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
             <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
             <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
+            <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
           </ul>
         </div>
         <div class="foot3">
@@ -375,7 +376,7 @@
           <ul class="links_all">
             <li><a href="https://workep.com/pricing.html">Pricing</a></li>
             <li><a href="https://angel.co/workep/jobs">Careers</a></li>
-            <li><a href="https://workep.com/pricing.html">Partners</a></li>
+            <li><a href="https://workep.com/partners.html">Partners</a></li>
             <!--<li><a href="#url">Press Kit</a></li>-->
           </ul>
         </div>
@@ -410,8 +411,8 @@
         <div class="footlanguage">
          <div class="footlanguage_select">
             <select onchange="if (this.value) window.location.href=this.value">
-              <option value="https://workep.com/" selected>English</option>
-              <option value="https://workep.com/es/es.html">Spanish</option>
+              <option value="https://workep.com/partners.html" selected>English</option>
+              <option value="https://workep.com/es/socios.html">Español</option>
             </select>
          </div>
         </div>
@@ -425,12 +426,12 @@
             <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="images/ins.svg" alt="workep instagram"></a></li>
           </ul>
         </div>
-        <div class="app_storelink">
+        <!-- <div class="app_storelink">
           <ul>
             <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="images/google_play.png" alt="workep android"></a></li>
             <li><a href="#url"><img src="images/app_store.png" alt="workep iOS"></a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
