--- a/workep-for-education.html
+++ b/workep-for-education.html
@@ -76,7 +76,7 @@
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/product.html">PRODUCT</a></li>
              <li><a href="https://workep.com/madeforgoogle.html">GOOGLE PROJECT MANAGEMENT</a></li>
-             <li><a href="https://workep.com/stories.html">USE CASES</a></li>
+             <!-- <li><a href="https://workep.com/stories.html">USE CASES</a></li> -->
              <li><a href="https://workep.com/pricing.html">PRICING</a></li>
              <li><a href="https://workep.com/partners.html" target="_blank">PARTNERS</a></li>
 
@@ -326,6 +326,7 @@ projects by providing a platform fully integrated with Google for Education.</p>
           <h2>Our users in Education</h2>
         </div>
         <div class="user_edu_slider">
+          <!-- Berkeley -->
           <div class="user_edu_box">
             <div class="user_edu_box_logo">
               <img src="images/berkeley.png" alt="">
@@ -338,22 +339,24 @@ projects by providing a platform fully integrated with Google for Education.</p>
                 <div class="flexiblity_testi_txt">
 
                   <div class="quotetext">
-                    <p>Workep helps us keep track of all creative work and make sure they are ready on time.</p>
+                    <p>Workep allows our students, teachers, and directors to collaborate together, fully centralized and with Google Docs.</p>
                   </div>
-                  <span class="flexiblity_testi_name">Kenneth Welch</span>
-                  <span class="flexiblity_testi_desig">Director from Berkeley</span>
+                  <span class="flexiblity_testi_name">Sibyl Chen</span>
+                  <span class="flexiblity_testi_desig">Senior Director from Berkeley / SkyDeck</span>
                 </div>
                 <div class="flexiblity_testi_img">
                   <figure>
-                    <img src="images/education_testi.png" alt="">
+                    <img src="images/peoplefaces/sibyl.png" alt="">
                   </figure>
                 </div>
 
               </div>
           </div>
+
+          <!-- EUSA -->
           <div class="user_edu_box">
             <div class="user_edu_box_logo">
-              <img src="images/berkeley.png" alt="">
+              <img src="images/logos/eusa.png" style="max-width: 30%" alt="">
             </div>
             <span class="rating_star1">
                 <img src="images/ratings_star.png" alt="">
@@ -363,39 +366,14 @@ projects by providing a platform fully integrated with Google for Education.</p>
                 <div class="flexiblity_testi_txt">
 
                   <div class="quotetext">
-                    <p>Workep helps us keep track of all creative work and make sure they are ready on time.</p>
+                    <p>Workep gives our students the initial bridge to a modern project management experience with a single and simple way. Even better when integrated with Google.</p>
                   </div>
-                  <span class="flexiblity_testi_name">Kenneth Welch</span>
-                  <span class="flexiblity_testi_desig">Director from Berkeley</span>
+                  <span class="flexiblity_testi_name">Javier Prada</span>
+                  <span class="flexiblity_testi_desig">Development Director at EUSA</span>
                 </div>
                 <div class="flexiblity_testi_img">
                   <figure>
-                    <img src="images/education_testi.png" alt="">
-                  </figure>
-                </div>
-
-              </div>
-          </div>
-          <div class="user_edu_box">
-            <div class="user_edu_box_logo">
-              <img src="images/berkeley.png" alt="">
-            </div>
-            <span class="rating_star1">
-                <img src="images/ratings_star.png" alt="">
-            </span>
-            <div class="flexiblity_testi">
-
-                <div class="flexiblity_testi_txt">
-
-                  <div class="quotetext">
-                    <p>Workep helps us keep track of all creative work and make sure they are ready on time.</p>
-                  </div>
-                  <span class="flexiblity_testi_name">Kenneth Welch</span>
-                  <span class="flexiblity_testi_desig">Director from Berkeley</span>
-                </div>
-                <div class="flexiblity_testi_img">
-                  <figure>
-                    <img src="images/education_testi.png" alt="">
+                    <img src="images/peoplefaces/javier.jpeg" alt="">
                   </figure>
                 </div>
 
@@ -417,97 +395,98 @@ projects by providing a platform fully integrated with Google for Education.</p>
     </div>
   </div>
 
-
   <footer class="main_footer">
-    <div class="foot_top">
-      <div class="container">
-        <div class="foot_top_row">
-          <div class="foot1">
-            <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt=""></a>
-            <p>©2019 Workep,Inc. All rights reserved <br>
-              <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
-            </p>
-            <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love "></i> by Workep</span>
-          </div>
-          <div class="foot2">
-            <h4>Product</h4>
-            <ul class="links_all">
-              <li><a href="https://workep.com/product.html">Features</a></li>
-              <!-- <li><a href="#url">Integrations </a></li> -->
-              <!-- <li><a href="#url">Users guide </a></li> -->
-              <li><a href="https://workep.com/stories.html">Use cases </a></li>
-              <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
-              <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
-              <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
-            </ul>
-          </div>
-          <div class="foot3">
-            <h4>Workep</h4>
-            <ul class="links_all">
-              <li><a href="https://workep.com/pricing.html">Pricing</a></li>
-              <li><a href="https://angel.co/workep/jobs">Careers</a></li>
-              <li><a href="https://workep.com/pricing.html">Partners</a></li>
-              <!--<li><a href="#url">Press Kit</a></li>-->
-            </ul>
-          </div>
-          <div class="foot4">
-            <h4>Resources</h4>
-            <ul class="links_all">
-              <li><a href="https://blog.workep.com/">Blog</a></li>
-              <!-- <li><a href="#url">Ebooks </a></li> -->
-              <li><a href="https://www.youtube.com/channel/UCt3GbHNB2il6tiXxoXtukUQ">Videos</a></li>
-              <li><a href="https://help.workep.com/">Help Center</a></li>
-              <li><a href="https://projectmanagement.workep.com/everything-you-need-to-know-about-project-management">Complete PM guide</a></li>
-            </ul>
-            <h4>Legal</h4>
-            <ul class="links_all">
-              <li><a href="https://workep.com/privacy-policy.html">Privacy</a></li>
-              <li><a href="https://workep.com/terms.html">Terms of Service</a></li>
-            </ul>
-          </div>
-          <div class="foot5">
-            <h4>Contact</h4>
-            <ul class="soc_link">
-               <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt=""></a></li>
-               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt=""></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="foot_bot">
-      <div class="container">
-        <div class="foot_bot_row">
-          <div class="footlanguage">
-           <div class="footlanguage_select">
-              <select onchange="if (this.value) window.location.href=this.value">
-                <option value="https://workep.com/" selected>English</option>
-                <option value="https://workep.com/es/es.html">Spanish</option>
-              </select>
-           </div>
-          </div>
-          <div class="foot_bot_blog">
-            <a href="https://blog.workep.com/">Blog</a>
-          </div>
-          <div class="foot_bot_soc">
-            <ul>
-              <li><a href="https://twitter.com/workep" target="_blank"><img src="images/twit.svg" alt="workep twitter"></a></li>
-              <li><a href="https://www.facebook.com/workepapp" target="_blank"><img src="images/fb.svg" alt="workep facebook"></a></li>
-              <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="images/ins.svg" alt="workep instagram"></a></li>
-            </ul>
-          </div>
-          <div class="app_storelink">
-            <ul>
-              <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="images/google_play.png" alt="workep android"></a></li>
-              <li><a href="#url"><img src="images/app_store.png" alt="workep iOS"></a></li>
-            </ul>
+      <div class="foot_top">
+        <div class="container">
+          <div class="foot_top_row">
+            <div class="foot1">
+              <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt=""></a>
+              <p>©2019 Workep,Inc. All rights reserved <br>
+                <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
+              </p>
+              <span class="madeby">Made with <i><img src="images/heart_im.png" alt="workep made with love "></i> by Workep</span>
+            </div>
+            <div class="foot2">
+              <h4>Product</h4>
+              <ul class="links_all">
+                <li><a href="https://workep.com/product.html">Features</a></li>
+                <!-- <li><a href="#url">Integrations </a></li> -->
+                <!-- <li><a href="#url">Users guide </a></li> -->
+                <!-- <li><a href="https://workep.com/stories.html">Use cases </a></li> -->
+                <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
+                <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
+                <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
+                <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
+              </ul>
+            </div>
+            <div class="foot3">
+              <h4>Workep</h4>
+              <ul class="links_all">
+                <li><a href="https://workep.com/pricing.html">Pricing</a></li>
+                <li><a href="https://angel.co/workep/jobs">Careers</a></li>
+                <li><a href="https://workep.com/partners.html">Partners</a></li>
+                <!--<li><a href="#url">Press Kit</a></li>-->
+              </ul>
+            </div>
+            <div class="foot4">
+              <h4>Resources</h4>
+              <ul class="links_all">
+                <li><a href="https://blog.workep.com/">Blog</a></li>
+                <!-- <li><a href="#url">Ebooks </a></li> -->
+                <li><a href="https://www.youtube.com/channel/UCt3GbHNB2il6tiXxoXtukUQ">Videos</a></li>
+                <li><a href="https://help.workep.com/">Help Center</a></li>
+                <li><a href="https://projectmanagement.workep.com/everything-you-need-to-know-about-project-management">Complete PM guide</a></li>
+              </ul>
+              <h4>Legal</h4>
+              <ul class="links_all">
+                <li><a href="https://workep.com/privacy-policy.html">Privacy</a></li>
+                <li><a href="https://workep.com/terms.html">Terms of Service</a></li>
+              </ul>
+            </div>
+            <div class="foot5">
+              <h4>Contact</h4>
+              <ul class="soc_link">
+                 <li><a href="https://twitter.com/workep" target="_blank"><img src="images/con_ic2.png" alt=""></a></li>
+                 <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="images/con_ic3.png" alt=""></a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </footer>
+      <div class="foot_bot">
+        <div class="container">
+          <div class="foot_bot_row">
+            <div class="footlanguage">
+             <div class="footlanguage_select">
+                <select onchange="if (this.value) window.location.href=this.value">
+                  <option value="https://workep.com/workep-for-education.html" selected>English</option>
+                  <option value="https://workep.com/es/workep-para-educacion.html">Español</option>
+                </select>
+             </div>
+            </div>
+            <div class="foot_bot_blog">
+              <a href="https://blog.workep.com/">Blog</a>
+            </div>
+            <div class="foot_bot_soc">
+              <ul>
+                <li><a href="https://twitter.com/workep" target="_blank"><img src="images/twit.svg" alt="workep twitter"></a></li>
+                <li><a href="https://www.facebook.com/workepapp" target="_blank"><img src="images/fb.svg" alt="workep facebook"></a></li>
+                <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="images/ins.svg" alt="workep instagram"></a></li>
+              </ul>
+            </div>
+            <!-- <div class="app_storelink">
+              <ul>
+                <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="images/google_play.png" alt="workep android"></a></li>
+                <li><a href="#url"><img src="images/app_store.png" alt="workep iOS"></a></li>
+              </ul>
+            </div> -->
+          </div>
+        </div>
+      </div>
+    </footer>
 
   	<!-- Jquery-->
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/slick.js"></script>
