--- a/made-for-google.html
+++ b/made-for-google.html
@@ -73,7 +73,7 @@
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/product.html">PRODUCT</a></li>
              <li><a href="https://workep.com/madeforgoogle.html">GOOGLE PROJECT MANAGEMENT</a></li>
-             <li><a href="https://workep.com/stories.html">USE CASES</a></li>
+             <!-- <li><a href="https://workep.com/stories.html">USE CASES</a></li> -->
              <li><a href="https://workep.com/pricing.html">PRICING</a></li>
              <li><a href="https://workep.com/partners.html" target="_blank">PARTNERS</a></li>
 
@@ -113,8 +113,8 @@
         </div>
          <div class="joinworkep_btns">
             <ul>
-              <li><a href="#url" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
-              <li><a href="#url" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
+              <li><a href="https://app.workep.com/login" class="signupgoogle"><span>SIGN UP WITH GOOGLE</span></a></li>
+              <li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
                 <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star" aria-hidden="true"></i>
@@ -506,10 +506,11 @@
               <li><a href="https://workep.com/product.html">Features</a></li>
               <!-- <li><a href="#url">Integrations </a></li> -->
               <!-- <li><a href="#url">Users guide </a></li> -->
-              <li><a href="https://workep.com/stories.html">Use cases </a></li>
+              <!-- <li><a href="https://workep.com/stories.html">Use cases </a></li> -->
               <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
               <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
+              <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
             </ul>
           </div>
           <div class="foot3">
@@ -517,7 +518,7 @@
             <ul class="links_all">
               <li><a href="https://workep.com/pricing.html">Pricing</a></li>
               <li><a href="https://angel.co/workep/jobs">Careers</a></li>
-              <li><a href="https://workep.com/pricing.html">Partners</a></li>
+              <li><a href="https://workep.com/partners.html">Partners</a></li>
               <!--<li><a href="#url">Press Kit</a></li>-->
             </ul>
           </div>
@@ -552,8 +553,8 @@
           <div class="footlanguage">
            <div class="footlanguage_select">
               <select onchange="if (this.value) window.location.href=this.value">
-                <option value="https://workep.com/" selected>English</option>
-                <option value="https://workep.com/es/es.html">Spanish</option>
+                <option value="https://workep.com/made-for-google.html" selected>English</option>
+                <option value="https://workep.com/es/hechoparagoogle.html">Español</option>
               </select>
            </div>
           </div>
@@ -567,12 +568,12 @@
               <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="images/ins.svg" alt="workep instagram"></a></li>
             </ul>
           </div>
-          <div class="app_storelink">
+          <!-- <div class="app_storelink">
             <ul>
               <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="images/google_play.png" alt="workep android"></a></li>
               <li><a href="#url"><img src="images/app_store.png" alt="workep iOS"></a></li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
