--- a/pricing.html
+++ b/pricing.html
@@ -75,7 +75,7 @@
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/product.html">PRODUCT</a></li>
              <li><a href="https://workep.com/madeforgoogle.html">GOOGLE PROJECT MANAGEMENT</a></li>
-             <li><a href="https://workep.com/stories.html">USE CASES</a></li>
+             <!-- <li><a href="https://workep.com/stories.html">USE CASES</a></li> -->
              <li><a href="https://workep.com/pricing.html">PRICING</a></li>
              <li><a href="https://workep.com/partners.html" target="_blank">PARTNERS</a></li>
 
@@ -164,7 +164,7 @@
                     <span class="pricetxt">
                       <strong>$9.99</strong> Per user / Per month
                     </span>
-                    <span class="terms_notes">*Billed anually or $11.99 billed monthly</span>
+                    <span class="terms_notes">*Billed annually or $11.99 billed monthly</span>
                   </div>
                   <div class="pricing_box_trial">
                     <a href="https://app.workep.com/login"><span>Start your 15 days free trial</span></a>
@@ -183,7 +183,7 @@
                     <span class="pricetxt">
                       <strong>$19.99</strong> Per user / Per month
                     </span>
-                    <span class="terms_notes">*Billed anually or $23,99 billed monthly</span>
+                    <span class="terms_notes">*Billed annually or $23,99 billed monthly</span>
                   </div>
                   <div class="pricing_box_trial">
                     <a href="https://app.workep.com/login"><span>Contact Sales</span></a>
@@ -882,7 +882,7 @@
   <div class="faq_sec common_gap">
     <div class="container">
       <div class="section_title">
-        <h2>Frequently Asqued Questions</h2>
+        <h2>Frequently Asked Questions</h2>
       </div>
          <div class="warp_faq">
           <div class="row faq_sec_row">
@@ -1014,10 +1014,11 @@
               <li><a href="https://workep.com/product.html">Features</a></li>
               <!-- <li><a href="#url">Integrations </a></li> -->
               <!-- <li><a href="#url">Users guide </a></li> -->
-              <li><a href="https://workep.com/stories.html">Use cases </a></li>
+              <!-- <li><a href="https://workep.com/stories.html">Use cases </a></li> -->
               <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
               <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
+              <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
             </ul>
           </div>
           <div class="foot3">
@@ -1025,7 +1026,7 @@
             <ul class="links_all">
               <li><a href="https://workep.com/pricing.html">Pricing</a></li>
               <li><a href="https://angel.co/workep/jobs">Careers</a></li>
-              <li><a href="https://workep.com/pricing.html">Partners</a></li>
+              <li><a href="https://workep.com/partners.html">Partners</a></li>
               <!--<li><a href="#url">Press Kit</a></li>-->
             </ul>
           </div>
@@ -1060,8 +1061,8 @@
           <div class="footlanguage">
            <div class="footlanguage_select">
               <select onchange="if (this.value) window.location.href=this.value">
-                <option value="https://workep.com/" selected>English</option>
-                <option value="https://workep.com/es/es.html">Spanish</option>
+                <option value="https://workep.com/pricing.html" selected>English</option>
+                <option value="https://workep.com/es/precios.html">Español</option>
               </select>
            </div>
           </div>
@@ -1075,12 +1076,12 @@
               <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="images/ins.svg" alt="workep instagram"></a></li>
             </ul>
           </div>
-          <div class="app_storelink">
+          <!-- <div class="app_storelink">
             <ul>
               <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="images/google_play.png" alt="workep android"></a></li>
               <li><a href="#url"><img src="images/app_store.png" alt="workep iOS"></a></li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
