--- a/stories.html
+++ b/stories.html
@@ -1,61 +1,96 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Workep</title>
-
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/easy-responsive-tabs.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/main.min.css">
-    <link rel="stylesheet" href="css/theme.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/font-awesome.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="style.css">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
-  </head>
+  <!-- Google indicator for language  -->
+  <link rel="alternate" hreflang="en" href="https://workep.com/" />
+  <link rel="canonical" href="https://workep.com/" />
+
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-KSFSSWG');</script>
+  <!-- End Google Tag Manager -->
+
+
+  <!-- End Google Tag Manager -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="The fastest project management experience for cross-enterprise collaboration, G Suite integration, Gantt Charts, Time Tracker, Budget and more. ">
+  <meta name="keywords" content="Google Apps, G Suite, projects, management, tasks, collaboration, integrate, automate, Time Tracker, Gantt Chart, Budget, Tracker, files, Google Drive, Calendar,">
+  <link rel="author" href="https://workep.com" />
+  <!-- FB Meta tags -->
+  <meta property="og:title" content="Workep: Rebuilding the project management experience"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocialImages/socialmediacover.jpg"/>
+  <meta property="og:url" content="https://workep.com"/>
+  <meta property="og:description" content="A cross-enterprise collaboration tool that is fast, easy to use and fully integrated within G Suite"/>
+
+  <!-- Twitter tags -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@workep" />
+  <meta name="twitter:title" content="Workep: Rebuilding the project management experience" />
+  <meta name="twitter:description" content="A cross-enterprise collaboration tool that is fast, easy to use and fully integrated within G Suite" />
+  <meta name="twitter:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocialImages/socialmediacover.jpg" />
+
+  <title>Workep: Stories</title>
+
+  <!-- Page icon -->
+  <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/easy-responsive-tabs.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/main.min.css">
+  <link rel="stylesheet" href="css/theme.css">
+  <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" href="css/font-awesome.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="style.css">
+</head>
   <body class="stories_page">
 
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KSFSSWG"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
-
-
-<header class="main_head">
+    <header class="main_head">
       <div class="container">
         <nav class="navbar navbar-expand-lg">
          <div class="logo">
-           <a href="#url"><img src="images/logo.png" alt=""></a>
+           <a href="https://workep.com"><img src="images/logo.png" alt="workep logo"></a>
          </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-           <img src="images/menu_bars.svg" alt="">
+           <img src="images/menu_bars.svg" alt="workep menu">
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-            <li><a href="#url">PRODUCT</a></li>
-             <li><a href="#url">GOOGLE PROJECT MANAGEMENT</a></li>
-             <li class="current-menu-item"><a href="#url">USE CASES</a></li>
-             <li><a href="#url">PRICING</a></li>
-             <li><a href="#url">PARTNERS</a></li>
+            <li><a href="https://workep.com/product.html">PRODUCT</a></li>
+             <li><a href="https://workep.com/madeforgoogle.html">GOOGLE PROJECT MANAGEMENT</a></li>
+             <!-- <li><a href="https://workep.com/stories.html">USE CASES</a></li> -->
+             <li><a href="https://workep.com/pricing.html">PRICING</a></li>
+             <li><a href="https://workep.com/partners.html" target="_blank">PARTNERS</a></li>
 
-             <!-- <li class="menu-item-has-children">
-                <a href="#url">News</a>
+             <li class="menu-item-has-children">
+                <a href="https://blog.workep.com/" target="_blank">RESOURCES</a>
                 <span class="clickD"></span>
                 <ul class="sub-menu">
-                    <li><a href="#url">Option 1</a></li>
-                    <li><a href="#url">Option 1</a></li>
-                    <li><a href="#url">Option 1</a></li>
-                    <li><a href="#url">Option 1</a></li>
+                    <li><a href="https://blog.workep.com/" target="_blank">BLOG</a></li>
+                    <li><a href="https://help.workep.com/" target="_blank">HELP CENTER</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=coI9NjjilTM">PRODUCT VIDEO</a></li>
+                    <li><a href="https://community.workep.com/" target="_blank">COMMUNITY</a></li>
                 </ul>
-              </li> -->
+              </li>
 
-             <li><a href="#url">RESOURCES</a></li>
-             <li class="loginbtn"><a href="#url">LOGIN</a></li>
-
+             <li class="loginbtn"><a href="https://app.workep.com/login">LOGIN</a></li>
 
 
             </ul>
@@ -63,7 +98,7 @@
           </div>
         </nav>
       </div>
-</header>
+    </header>
 
 
 
@@ -1276,10 +1311,11 @@ Workep is the Project Management platform that's flexible enough to adapt to eve
               <li><a href="https://workep.com/product.html">Features</a></li>
               <!-- <li><a href="#url">Integrations </a></li> -->
               <!-- <li><a href="#url">Users guide </a></li> -->
-              <li><a href="https://workep.com/stories.html">Use cases </a></li>
+              <!-- <li><a href="https://workep.com/stories.html">Use cases </a></li> -->
               <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
               <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
+              <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
             </ul>
           </div>
           <div class="foot3">
@@ -1287,7 +1323,7 @@ Workep is the Project Management platform that's flexible enough to adapt to eve
             <ul class="links_all">
               <li><a href="https://workep.com/pricing.html">Pricing</a></li>
               <li><a href="https://angel.co/workep/jobs">Careers</a></li>
-              <li><a href="https://workep.com/pricing.html">Partners</a></li>
+              <li><a href="https://workep.com/partners.html">Partners</a></li>
               <!--<li><a href="#url">Press Kit</a></li>-->
             </ul>
           </div>
@@ -1322,8 +1358,8 @@ Workep is the Project Management platform that's flexible enough to adapt to eve
           <div class="footlanguage">
            <div class="footlanguage_select">
               <select onchange="if (this.value) window.location.href=this.value">
-                <option value="https://workep.com/" selected>English</option>
-                <option value="https://workep.com/es/es.html">Spanish</option>
+                <option value="https://workep.com/stories.html" selected>English</option>
+                <option value="https://workep.com/es/casosdeexito.html">Español</option>
               </select>
            </div>
           </div>
@@ -1337,12 +1373,12 @@ Workep is the Project Management platform that's flexible enough to adapt to eve
               <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="images/ins.svg" alt="workep instagram"></a></li>
             </ul>
           </div>
-          <div class="app_storelink">
+          <!-- <div class="app_storelink">
             <ul>
               <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="images/google_play.png" alt="workep android"></a></li>
               <li><a href="#url"><img src="images/app_store.png" alt="workep iOS"></a></li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
