--- a/terms.html
+++ b/terms.html
@@ -72,7 +72,7 @@
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/product.html">PRODUCT</a></li>
              <li><a href="https://workep.com/madeforgoogle.html">GOOGLE PROJECT MANAGEMENT</a></li>
-             <li><a href="https://workep.com/stories.html">USE CASES</a></li>
+             <!-- <li><a href="https://workep.com/stories.html">USE CASES</a></li> -->
              <li><a href="https://workep.com/pricing.html">PRICING</a></li>
              <li><a href="https://workep.com/partners.html" target="_blank">PARTNERS</a></li>
 
@@ -365,10 +365,11 @@ If a Non-Workep Product is enabled for Customer’s team, please be mindful of a
             <li><a href="https://workep.com/product.html">Features</a></li>
             <!-- <li><a href="#url">Integrations </a></li> -->
             <!-- <li><a href="#url">Users guide </a></li> -->
-            <li><a href="https://workep.com/stories.html">Use cases </a></li>
+            <!-- <li><a href="https://workep.com/stories.html">Use cases </a></li> -->
             <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
             <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
             <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
+            <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
           </ul>
         </div>
         <div class="foot3">
@@ -376,7 +377,7 @@ If a Non-Workep Product is enabled for Customer’s team, please be mindful of a
           <ul class="links_all">
             <li><a href="https://workep.com/pricing.html">Pricing</a></li>
             <li><a href="https://angel.co/workep/jobs">Careers</a></li>
-            <li><a href="https://workep.com/pricing.html">Partners</a></li>
+            <li><a href="https://workep.com/partners.html">Partners</a></li>
             <!--<li><a href="#url">Press Kit</a></li>-->
           </ul>
         </div>
@@ -411,8 +412,8 @@ If a Non-Workep Product is enabled for Customer’s team, please be mindful of a
         <div class="footlanguage">
          <div class="footlanguage_select">
             <select onchange="if (this.value) window.location.href=this.value">
-              <option value="https://workep.com/" selected>English</option>
-              <option value="https://workep.com/es/es.html">Spanish</option>
+              <option value="https://workep.com/terms.html" selected>English</option>
+              <option value="https://workep.com/terms.html">Español</option>
             </select>
          </div>
         </div>
@@ -426,12 +427,12 @@ If a Non-Workep Product is enabled for Customer’s team, please be mindful of a
             <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="images/ins.svg" alt="workep instagram"></a></li>
           </ul>
         </div>
-        <div class="app_storelink">
+        <!-- <div class="app_storelink">
           <ul>
             <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="images/google_play.png" alt="workep android"></a></li>
             <li><a href="#url"><img src="images/app_store.png" alt="workep iOS"></a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
